commit 7 - fix chrome on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -617,7 +617,7 @@ body._loaded {
   display: flex;
   gap: 8px;
   width: 95vw;
-  height: 75%;
+  height: 45vh;
   margin-left: auto;
   margin-right: auto;
   position: relative;
@@ -626,17 +626,17 @@ body._loaded {
 }
 @media (max-height: 50.625em) {
   .bonus__cont {
-    height: 85%;
+    height: 44vh;
   }
 }
 @media (max-height: 45em) {
   .bonus__cont {
-    height: 95%;
+    height: 42vh;
   }
 }
 @media (max-width: 23.4375em) {
   .bonus__cont {
-    height: 90%;
+    height: 43vh;
   }
 }
 @media (max-height: 43.75em) {
@@ -652,7 +652,7 @@ body._loaded {
 @media (max-height: 37.5em) {
   .bonus__cont {
     width: 50vw;
-    height: 100%;
+    height: 37vh;
   }
 }
 .bonus__column {
